<resources>
    <string name="app_name">Socially</string>
    <string name="from">from</string>
    <string name="SMD">SMD</string>
    <string name="back_button">Back button</string>
    <string name="socially">Socially</string>
    <string name="createAccountText">Create An Account and Sign Up</string>
    <string name="userName">Username</string>
    <string name="enter_username">a_khawaja</string>
    <string name="firstName">First Name</string>
    <string name="Ahmad">Ahmad</string>
    <string name="lastName">Last Name</string>
    <string name="Khawaja">Khawaja</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="dobtext">21-08-2002</string>
    <string name="emailText">E-mail</string>
    <string name="emailHint">Enter E-mail</string>
    <string name="passwordText">********</string>
    <string name="password">Password</string>
    <string name="createAccount">Create an Account</string>
    <string name="user_name">user_name</string>
    <string name="login">Log in</string>
    <string name="switch_account">Switch accounts</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="camera_button">camera button</string>
    <string name="dm">direct message</string>
    <string name="heart">heart</string>
    <string name="your_story">Your Story</string>
    <string name="post_username">joshua_I</string>
    <string name="post_location">Tokyo, Japan</string>
    <string name="comments">comments button</string>
    <string name="savepost">save post button</string>
    <string name="postnumber">post number</string>
    <string name="sharepost">share button</string>
    <string name="Liked_by">Liked by <b>carig_love</b> and <b>44,686 others</b></string>
    <string name="post_description"><b>joshua_I</b> The game in japan was amazing and i want to share some photos.</string>
    <string name="home">Home icon</string>
    <string name="profile">profile</string>
    <string name="search">Search</string>
    <string name="add">add</string>
    <string name="jackson_wang">jackson</string>
    <string name="jungkook">jungcook</string>
    <string name="emily">emily</string>
    <string name="rells_button">reels button</string>
    <string name="robin">robin</string>
    <string name="Style">Style</string>
    <string name="Sports">Sports</string>
    <string name="Shop">Shop</string>
    <string name="Auto">Auto</string>
    <string name="Music">Music</string>
    <string name="scan_button">scan button</string>
    <string name="internshala">internshala</string>
    <string name="clear">Clear</string>
    <string name="top">Top</string>
    <string name="Accounts">Accounts</string>
    <string name="tags">Tags</string>
    <string name="places">Places</string>
    <string name="hash_internshala">#internshala</string>
    <string name="thousan_post">1000+ post</string>
    <string name="hash_internshala2">#intenshala_nomoretheory_challenge</string>
    <string name="fivehundreed_post">500+ post</string>
    <string name="internshala_address">Internshala, B-61, Untech Zone</string>
    <string name="internshala_casmpus">internshalaincampus</string>
    <string name="hundred_post">100+ post</string>
    <string name="joeshome">Joe Shmoe</string>
    <string name="haveaniceday">have a nice day bro</string>
    <string name="john">john_smith</string>
    <string name="seeyou">See you there.</string>
    <string name="simran">simran</string>
    <string name="breakup">Breakup😭😭😭</string>
    <string name="now">.now</string>
    <string name="twodays">.2d</string>
    <string name="camera">Camera</string>
    <string name="joes_home">joe_shome</string>
    <string name="calls_button">calls button</string>
    <string name="warning">warning button</string>
    <string name="Message">Message...</string>
    <string name="hello">helloooo</string>
    <string name="time">2:30</string>
    <string name="johnsmith">john</string>
    <string name="south_korea">Seoul, South Korea</string>
    <string name="likedbypost2">Liked by <b>simran</b> and <b>1,234 others</b></string>
    <string name="post2_description">Amazing view from the concert! 🎤✨ <b>#concert #music #seoul</b></string>
    <string name="Following">Following</string>
    <string name="You">You</string>
    <string name="notification1"><b>jackson_wang</b> started following you.</string>
    <string name="twohours">2h</string>
    <string name="notification2"><b>jungkook</b> liked <b>emily\'s</b> comment: <font color="#0066CC">@emily</font> nice!!</string>
    <string name="notification3"><b>emily</b> liked 3 posts.</string>
    <string name="notification4"><b>robin</b> liked 5 posts.</string>
    <string name="threehours">3h</string>
    <string name="notification5"><b>jackson_wang</b> and <b>jungkook</b> liked your post.</string>
    <string name="notification6"><b>alex_smith</b> started following you.</string>
    <string name="notification7"><b>emily</b> liked your comment: <font color="#0066CC">@jackson_wang</font> amazing shot!</string>
    <string name="threedays">3d</string>
    <string name="notification8"><b>robin</b> liked your post.</string>
    <string name="notification9"><b>jackson_wang</b> tagged you in a post.</string>
    <string name="followRequests">Follow Requests</string>
    <string name="New">New</string>
    <string name="notification11"><b>sarah_miller</b> liked your photo.</string>
    <string name="twomin">2m</string>
    <string name="Today">Today</string>
    <string name="notification12"><b>mike_jones, alex_smith</b> and <b>26 others</b> liked your post.</string>
    <string name="thisweek">This Week</string>
    <string name="notification13"><b>emma_wilson</b> mentioned you in a comment: <font color="#0066CC">@jackson_wang</font> exactly!</string>
    <string name="notification14"><b>david_clark</b> started following you.</string>
    <string name="message">Message</string>
    <string name="notification15"><b>lisa_brown</b> liked 3 posts.</string>
    <string name="thismonth">This Month</string>
    <string name="notification16"><b>john_doe</b> and <b>15 others</b> liked your post.</string>
    <string name="twoweeks">2w</string>
    <string name="notification17"><b>ryan_taylor</b> started following you.</string>
    <string name="follow">Follow</string>
    <string name="fiftyfour">54</string>
    <string name="Posts">Posts</string>
    <string name="fivehundreed">1054</string>
    <string name="Followers">Followers</string>
    <string name="Jacob">Jacob West</string>
    <string name="description">Digital goodies designer <font color="#0066CC">@pixsellz</font></string>
    <string name="description2">Everything is designed.</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Friends">Friends</string>
    <string name="Design">Design</string>
    <string name="profilepost">Profile posts</string>
    <string name="Cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="change_profile_photo">Change Profile photo</string>
    <string name="Name">Name</string>
    <string name="Ahmad_khawaja">Ahmad Khawaja</string>
    <string name="Website">Website</string>
    <string name="Bio">Bio</string>
    <string name="biotext">Digital goodies designer <font color="#8F3F42">@pixsellz</font>\nEverything is designed.</string>
    <string name="Email">Email</string>
    <string name="myemail">khawajaahmad0019@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="myphone">+923065666960</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="proAccount">Switch to professional account</string>
    <string name="privateInformation">Private Information</string>
    <string name="heighlights">Highlight <font color="#8F8484"> December 2, 2024</font></string>
    <string name="artist">Artist . Song Title ></string>
    <string name="Activity">Activity</string>
    <string name="Create">Create</string>
    <string name="create_post">Post</string>
    <string name="send">send</string>
    <string name="more">more</string>
    <string name="browse">Browse</string>
    <string name="close_friends">Close Friends</string>
    <string name="facebook">facebook</string>
    <string name="heighlight">highlight</string>
    <string name="recent">Recent ⌄</string>
    <string name="next">Next</string>
    <string name="library">Library</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
</resources>