<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage"
    android:id="@+id/main"
    android:background="@color/barkhandi">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/back_button_full_arrow"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/socially"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socially"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccountText"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsregular"
        android:layout_below="@+id/socially"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/add_a_photo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/createAccountText"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/black" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_below="@+id/dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/enter_username"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:layout_below="@id/userNameText"/>

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_below="@+id/userNameInput"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/Ahmad"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:layout_below="@id/firstNameText"/>

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_below="@+id/firstNameInput"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/Khawaja"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:layout_below="@id/lastNameText"/>

    <TextView
        android:id="@+id/dateofbirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateofbirth"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_below="@+id/lastNameInput"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/dobInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/dobtext"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/dateofbirth"
        android:inputType="date"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailText"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_below="@+id/dobInput"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/emailTextValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/emailHint"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/emailText"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_below="@+id/emailTextValue"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/passInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/passwordText"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/passwordText"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/createAccount"
        android:textColor="@color/lightpink"
        android:fontFamily="@font/poppinssemibold"
        android:layout_below="@+id/passInput"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background_lightmehroon"/>

</RelativeLayout>
