<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilePage"
    android:background="@color/white">

    <!-- Top navigation -->
    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="6dp"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsregular"/>

        <TextView
            android:id="@+id/editprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EditProfile"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/poppinssemibold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/barkhandi"
            android:textSize="16sp"
            android:fontFamily="@font/poppinssemibold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"/>
    </RelativeLayout>

    <!-- Profile picture -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/default_avatar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/top_nav"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/whitishgrey" />

    <TextView
        android:id="@+id/changedp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_photo"
        android:textColor="@color/barkhandi"
        android:textSize="12sp"
        android:fontFamily="@font/poppinsregular"
        android:layout_below="@+id/dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="6dp"/>

    <View
        android:id="@+id/dividerLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitishgrey"
        android:layout_below="@+id/changedp" />

    <LinearLayout
        android:id="@+id/profile_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/dividerLine1"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="6dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whitishgrey"
                android:text="@string/Ahmad_khawaja"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="6dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whitishgrey"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="6dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Website"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
            <EditText
                android:id="@+id/edit_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whitishgrey"
                android:hint="@string/Website"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Bio"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
            <EditText
                android:id="@+id/edit_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:text="@string/biotext"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/dividerLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitishgrey"
        android:layout_below="@+id/profile_fields" />

    <TextView
        android:id="@+id/profesionalAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proAccount"
        android:layout_below="@id/dividerLine2"
        android:layout_marginStart="16dp"
        android:textColor="@color/barkhandi"
        android:textSize="16sp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/poppinsregular"/>

    <TextView
        android:id="@+id/privateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privateInformation"
        android:layout_below="@id/profesionalAccount"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppinssemibold"/>

    <LinearLayout
        android:id="@+id/private_profile_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/privateAccount"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="6dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
            <EditText
                android:id="@+id/edit_emial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whitishgrey"
                android:text="@string/myemail"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="6dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whitishgrey"
                android:text="@string/myphone"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
            <EditText
                android:id="@+id/edit_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:text="@string/Male"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsregular"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
